2007-10-12 Takuro Ashie <ashie@homa.ne.jp>

	* src/gimv_thumb.c, src/gimv_elist.c, src/gimv_image_win.c,
	  src/gimv_comment.c, src/gimv_image_loader.c, src/gimv_dlist.c,
	  src/gimv_image.c, src/fr-command.c, src/gimv_dupl_win.c,
	  src/gimv_thumb_win.c, src/gimv_thumb_view.c, src/gimv_dupl_finder.c,
	  src/gimv_cell_pixmap.c, src/gimv_nav_win.c, src/fr-archive.c,
	  src/gimv_image_view.c, src/gimv_anim.c, src/gimv_zlist.c,
	  src/gimv_scrolled.c, src/gimv_prefs.c, src/gimv_image_saver.c,
	  src/gimv_zalbum.c, src/fr-process.c:
	Use G_DEFINE_TYPE.

2007-10-12 Takuro Ashie <ashie@homa.ne.jp>

	* plugins/thumbnail_view/detailview2.c: Removed.
	* plugins/thumbnail_view/Makefile.am: Follow the change
	* plugins/thumbnail_view/detailview.c: Move codes to this file.

2007-10-12 Takuro Ashie <ashie@homa.ne.jp>

	* src/gtk2-compat.[ch]: Removed.
	* src/Makefile.am, *.[ch]: Follow the change.

2007-10-12 Takuro Ashie <ashie@homa.ne.jp>

	* src/gimv_paned.h, src/gimv_hpaned.h, src/gimv_vpaned.h: Removed.
	* src/Makefile.am, src/gtkutil.[ch], src/gimv_prefs_win.c,
	  src/gimv_thumb_win.c, src/gtk2-compat.c:
	Follow the change.

2007-10-12 Takuro Ashie <ashie@homa.ne.jp>

	* configure.in, src/gimv_dupl_win.c, src/gimv_prefs_win.c,
	  src/prefs_ui/prefs_ui_thumbwin.c, plugins/image_loader/prefs_spi.c:
	Remove ENABLE_TREEVIEW.

2007-10-12 Takuro Ashie <ashie@homa.ne.jp>

	* configure.in: Remove USE_GTK2 and USE_NORMAL_PANED.

2007-10-12 Takuro Ashie <ashie@homa.ne.jp>

	* src/gimv_thumb.[ch], src/gimv_image_win.c, src/gimv_image_loader.c,
	  src/gimv_image_saver.c, src/gtkutils.c, src/gimv_prefs_win.c,
	  src/gimv_plugin.c, src/gimv_thumb_win.[ch], src/gimv_thumb_view.c,
	  src/gimv_nav_win.c, src/gimv_icon_stock.[ch], src/gimv_zlist.c,
	  src/gtk2-compat.c, src/gimv_scrolled.c, src/gimv_zalbum.c:
	Remove USE_GTK2.

2007-10-12 Takuro Ashie <ashie@homa.ne.jp>

	* src/gimv_paned.c. src/gimv_hpaned.c, src/gimv_vpaned.c: Removed.d
	* src/Makefile.am: Ditto.