@@ -36,6 +36,9 @@
 #include "rar-ext.h"
 
 
+G_DEFINE_TYPE (FRCommandRar, fr_command_rar, FR_COMMAND_TYPE)
+
+
 /* plugin implement definition */
 static ExtArchiverPlugin plugin_impl[] =
 {
@@ -59,16 +62,7 @@ GimvPluginInfo gimv_plugin_info =
 };
 
 
-static void fr_command_rar_class_init  (FRCommandRarClass *class);
-
-static void fr_command_rar_init        (FRCommand *afile);
-
 static void fr_command_rar_destroy     (GtkObject *object);
-
-
-/* Parent Class */
-
-static FRCommandClass *parent_class = NULL;
 
 
 /* -- list -- */
@@ -234,7 +228,7 @@ process_line (char *line, gpointer data)
 static void
 fr_command_rar_list (FRCommand *comm)
 {
-   FR_COMMAND_RAR (comm)->list_started = FALSE;
+   FR_COMMAND_RAR(comm)->list_started = FALSE;
 
    fr_process_clear (comm->process);
    fr_process_begin_command (comm->process, "rar");
@@ -345,7 +339,6 @@ fr_command_rar_class_init (FRCommandRarClass *class)
    FRCommandClass *afc;
    GtkObjectClass *object_class;
 
-   parent_class = gtk_type_class (FR_COMMAND_TYPE);
    object_class = (GtkObjectClass*) class;
    afc = (FRCommandClass*) class;
 
@@ -359,8 +352,10 @@ fr_command_rar_class_init (FRCommandRarClass *class)
 
  
 static void 
-fr_command_rar_init (FRCommand *comm)
+fr_command_rar_init (FRCommandRar *rar_comm)
 {
+   FRCommand *comm = FR_COMMAND(rar_comm);
+
    comm->propAddCanUpdate             = TRUE; 
    comm->propExtractCanAvoidOverwrite = TRUE;
    comm->propExtractCanSkipOlder      = TRUE;
@@ -377,32 +372,8 @@ fr_command_rar_destroy (GtkObject *object)
    g_return_if_fail (IS_FR_COMMAND_RAR (object));
 
    /* Chain up */
-   if (GTK_OBJECT_CLASS (parent_class)->destroy)
-      (* GTK_OBJECT_CLASS (parent_class)->destroy) (object);
-}
-
-
-GtkType
-fr_command_rar_get_type ()
-{
-   static guint fr_command_rar_type = 0;
-
-   if (!fr_command_rar_type) {
-      GtkTypeInfo fr_command_rar_info = {
-         "FRCommandRar",
-         sizeof (FRCommandRar),
-         sizeof (FRCommandRarClass),
-         (GtkClassInitFunc) fr_command_rar_class_init,
-         (GtkObjectInitFunc) fr_command_rar_init,
-         /* reserved_1 */ NULL,
-         /* reserved_2 */ NULL,
-         (GtkClassInitFunc) NULL,
-      };
-      fr_command_rar_type = gtk_type_unique (fr_command_get_type(), 
-                                             &fr_command_rar_info);
-   }
-
-   return fr_command_rar_type;
+   if (GTK_OBJECT_CLASS (fr_command_rar_parent_class)->destroy)
+      GTK_OBJECT_CLASS (fr_command_rar_parent_class)->destroy (object);
 }
 
 
